# AITX-SAT-2026

./: .env.example  .gitignore  .vercelignore  AGENTS.md  Procfile  README.md  design-qa.md  railway.toml  vercel.json
api/: index.py
autoresearch/: improvement-boundaries.json
brain-cron-coordinator/: SKILL.md
cron-regex-scheduler/: SKILL.md  cron_parse.py
dashboard/: app.js  autoresearch.html  index.html  layout-fixes.css
data/: latest_rsi_eval.json  rsi_runs.csv
database-first-research/: SKILL.md
docs/: agent-credentials.md  architecture.excalidraw  design-qa.md  multi-agent-architecture.md  recursive_intelligence_evaluation.md  rsi-world.html  self-improving-harness.md  self-improving-review-judge.md  system-status-2026-07-18.md
environments/gpu_deal_judge/: gpu_deal_judge.py  pyproject.toml
environments/gpu_deal_judge/.prime/: .env-metadata.json
environments/gpu_deal_judge/data/: golden_dataset.json
environments/gpu_deal_judge/outputs/evals/gpu-deal-judge--nvidia--nemotron-3-super-120b-a12b/0882ee04/: metadata.json
environments/gpu_deal_judge/outputs/evals/gpu-deal-judge--nvidia--nemotron-3-super-120b-a12b/bed4add5/: metadata.json  results.jsonl
environments/gpu_deal_judge_v1/: pyproject.toml
environments/gpu_deal_judge_v1/.prime/: .env-metadata.json
environments/gpu_deal_judge_v1/gpu_deal_judge_v1/: __init__.py  taskset.py
environments/gpu_deal_judge_v1/gpu_deal_judge_v1/data/: golden_dataset.json
frontend/: app.js  autoresearch.html  index.html  layout-fixes.css
hermes-cron-dispatcher/: SKILL.md  dispatch_cron_request.py
(+90 files in other folders)
