[project]
name = "gpu-deal-judge"
version = "0.1.1"
description = "GPU purchase-decision judge environment (AITX SAT 2026) - episodic-memory RSI eval"
requires-python = ">=3.10"
dependencies = ["verifiers>=0.1.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["gpu_deal_judge.py"]

[tool.hatch.build.targets.wheel]
packages = ["."]
