[project]
name = "gpu-deal-judge-v1"
version = "0.1.0"
description = "PC-purchase decision benchmark for Decision Frontier."
tags = ["single-turn", "commerce", "gpu", "macbook", "ram", "v1"]
requires-python = ">=3.11"
dependencies = ["verifiers>=0.2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gpu_deal_judge_v1"]

[tool.verifiers.eval]
num_examples = 15
rollouts_per_example = 3
